--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Quiz</title>
+    <title>кодове речення!!!</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -18,7 +18,7 @@
 </head>
 <body>
     <h1>кодове речення......</h1>
-    <p>сюди пиши відповідь (з великої букви!!!)</p>
+    <p>сюди пиши кодове речення (з великої букви!!!)</p>
     <input type="text" id="answer" placeholder="сюдиии">
     <button onclick="checkAnswer()">перевірка</button>
     <p class="result" id="result"></p>
