--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             const result = document.getElementById("result");
 
             if (userAnswer === correctAnswer.toLowerCase()) {
-                result.textContent = "непогано... продовжимо розмову тут: https://docs.google.com/presentation/d/1HfCyiwOW0h7lZlwkpc3qR8DyBiDtLagVUwF7IWbRbuY/edit#slide=id.g322b7f06993_0_414";
+                result.textContent = "непогано... продовжимо розмову за посиланням на 53 слайді";
                 result.style.color = "black";
             } else {
                 result.textContent = "неправильно!!! мухахахаха!! даю ще одну спробу";
